--- a/wp-content/themes/amorphous/package.json
+++ b/wp-content/themes/amorphous/package.json
@@ -120,6 +120,7 @@
     "react-router-redux": "^4.0.8",
     "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "throttle-debounce": "^1.0.1",
     "toastr": "^2.1.2",
