--- a/wp-content/themes/amorphous/package.json
+++ b/wp-content/themes/amorphous/package.json
@@ -79,6 +79,9 @@
     "react-addons-test-utils": "^15.6.0",
     "react-headroom": "^2.1.5",
     "react-hot-loader": "^1.3.1",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-mock-store": "^1.2.3",
     "rimraf": "^2.6.1",
@@ -117,7 +120,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-router-redux": "^4.0.8",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
