--- a/wp-content/themes/amorphous/package.json
+++ b/wp-content/themes/amorphous/package.json
@@ -83,6 +83,7 @@
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-immutable-state-invariant": "^2.0.0",
+    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.2.3",
     "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
