--- a/wp-content/themes/amorphous/package.json
+++ b/wp-content/themes/amorphous/package.json
@@ -44,6 +44,7 @@
     "expect": "^1.20.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "flickity": "^2.0.10",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -90,14 +91,16 @@
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.2.3",
-    "resolve-url-loader": "^2.1.0",
+    "resolve-url-loader": "^2.1.1",
     "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
     "sass-loader": "^6.0.6",
     "snapkite-stream-client": "^1.0.3",
     "style-it": "^1.6.8",
     "style-loader": "^0.18.2",
+    "tiny-slider": "^2.2.4",
     "toastr": "^2.1.2",
+    "url-loader": "^0.6.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0",
