--- a/wp-content/themes/amorphous/package.json
+++ b/wp-content/themes/amorphous/package.json
@@ -29,6 +29,7 @@
     "browser-sync-webpack-plugin": "^1.2.0",
     "browserify": "^14.1.0",
     "bulma": "^0.5.3",
+    "bulma-divider": "0.0.1",
     "cheerio": "^1.0.0-rc.2",
     "clean-webpack-plugin": "^0.1.16",
     "colors": "^1.1.2",
@@ -74,6 +75,7 @@
     "jshint-stylish": "^2.2.1",
     "lodash": "^4.17.4",
     "lodash.assign": "^4.2.0",
+    "lory.js": "^2.3.3",
     "lost": "^8.0.0",
     "mocha": "^3.4.2",
     "nock": "^9.0.14",
@@ -95,6 +97,7 @@
     "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
     "sass-loader": "^6.0.6",
+    "slick-carousel": "^1.8.1",
     "snapkite-stream-client": "^1.0.3",
     "style-it": "^1.6.8",
     "style-loader": "^0.18.2",
