--- a/wp-content/themes/amorphous/package.json
+++ b/wp-content/themes/amorphous/package.json
@@ -87,6 +87,7 @@
     "react-addons-test-utils": "^15.6.0",
     "react-headroom": "^2.1.5",
     "react-hot-loader": "^1.3.1",
+    "react-sticky-el": "^1.0.13",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
