--- a/wp-content/themes/amorphous/package.json
+++ b/wp-content/themes/amorphous/package.json
@@ -30,6 +30,8 @@
     "browserify": "^14.1.0",
     "bulma": "^0.5.3",
     "bulma-divider": "0.0.1",
+    "bulma-pageloader": "0.0.2",
+    "bulma-steps-component": "^0.5.3",
     "cheerio": "^1.0.0-rc.2",
     "clean-webpack-plugin": "^0.1.16",
     "colors": "^1.1.2",
