--- a/wp-content/themes/amorphous/package.json
+++ b/wp-content/themes/amorphous/package.json
@@ -4,7 +4,7 @@
   "description": "MWCC theme modules / tasks",
   "scripts": {
     "start": "webpack --watch --progress --config webpack.config.js",
-    "build": "npm run clean && webpack -p --progress --config webpack.production.js",
+    "build": "webpack -p --progress  --config webpack.config.js ",
     "clean": "rimraf ./build/*"
   },
   "private": true,
@@ -33,9 +33,10 @@
     "bulma-pageloader": "0.0.2",
     "bulma-steps-component": "^0.5.3",
     "cheerio": "^1.0.0-rc.2",
-    "clean-webpack-plugin": "^0.1.16",
+    "clean-webpack-plugin": "^0.1.17",
     "colors": "^1.1.2",
     "connected-react-router": "^4.2.3",
+    "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
     "del": "^2.2.2",
@@ -100,8 +101,10 @@
     "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
     "sass-loader": "^6.0.6",
+    "script-ext-html-webpack-plugin": "^1.8.7",
     "slick-carousel": "^1.8.1",
     "snapkite-stream-client": "^1.0.3",
+    "style-ext-html-webpack-plugin": "^3.4.3",
     "style-it": "^1.6.8",
     "style-loader": "^0.18.2",
     "tiny-slider": "^2.2.4",
